# seedsigner-lvgl-screens

./: .gitignore  .gitlab-ci.yml  .gitmodules  README.md  manifest.json  usercmodule.cmake
.forgejo/workflows/: screen-runner.yml  screenshots.yml
.github/workflows/: pages.yml  runner-core-test.yml  screen-runner.yml  screenshots.yml
bindings/: micropython.cmake  moddisplay_manager_bindings.c  moddisplay_manager_bindings.cpp  modseedsigner_bindings.c
components/display_axs15231b/: idf_component.yml  micropython.cmake  modlcdaxs_bindings.c
components/display_manager/: CMakeLists.txt  display_manager.c  display_manager.cpp  display_manager.h
components/seedsigner/: CMakeLists.txt  TODO.md  camera_entropy_overlay.cpp  camera_entropy_overlay.h  camera_preview_overlay.cpp  camera_preview_overlay.h  camera_preview_pillarboxed.cpp  camera_preview_pillarboxed.h  components.cpp  components.h  font_registry.cpp  font_registry.h  glyph_runs.cpp  glyph_runs.h  gui_constants.cpp  gui_constants.h  image_entropy.cpp  image_entropy.h  keyboard_core.cpp  keyboard_core.h  locale_fonts.cpp  locale_fonts.h  locale_loader.cpp  locale_loader.h  locale_picker.cpp  locale_picker.h  locales.h  multisig_wallet_descriptor_screen.cpp  navigation.cpp  navigation.h  overlay_manager.cpp  overlay_manager.h  qr_core.cpp  screen_helpers.cpp  screen_helpers.h  screen_scaffold.cpp  screen_scaffold.h  seed_address_verification_screen.cpp  seed_sign_message_confirm_address_screen.cpp  seed_sign_message_confirm_message_screen.cpp  (+11 more)
components/seedsigner/fonts/: inconsolata_semibold_22_4bpp.c  inconsolata_semibold_22_4bpp_133x.c  inconsolata_semibold_22_4bpp_200x.c  inconsolata_semibold_24_4bpp.c  inconsolata_semibold_24_4bpp_133x.c  inconsolata_semibold_24_4bpp_150x.c  inconsolata_semibold_24_4bpp_200x.c  opensans_western_regular.c  opensans_western_semibold.c  seedsigner_icons_24_4bpp.c  seedsigner_icons_24_4bpp_133x.c  seedsigner_icons_24_4bpp_200x.c  seedsigner_icons_36_4bpp_133x.c  seedsigner_icons_48_4bpp_133x.c  seedsigner_icons_48_4bpp_150x.c  seedsigner_icons_48_4bpp_200x.c
components/seedsigner/images/: btc_logo_img.c  btc_logo_img_133x.c  btc_logo_img_200x.c  seedsigner_logo_img.c
components/seedsigner/screens/: button_list_screen.cpp  camera_entropy_overlay_screen.cpp  camera_preview_overlay_screen.cpp  camera_preview_pillarboxed_screen.cpp  donate_screen.cpp  io_test_screen.cpp  keyboard_screen.cpp  large_icon_status_screen.cpp  loading_spinner_screen.cpp  main_menu_screen.cpp  multisig_wallet_descriptor_screen.cpp  opening_splash_screen.cpp  power_off_not_required_screen.cpp  power_options_screen.cpp  psbt_address_details_screen.cpp  psbt_change_details_screen.cpp  psbt_math_screen.cpp  psbt_op_return_screen.cpp  psbt_overview_screen.cpp  qr_display_screen.cpp  reset_screen.cpp  screensaver_screen.cpp  seed_add_passphrase_screen.cpp  seed_address_verification_screen.cpp  seed_address_verification_success_screen.cpp  seed_export_xpub_details_screen.cpp  seed_finalize_screen.cpp  seed_mnemonic_entry_screen.cpp  seed_review_passphrase_screen.cpp  seed_sign_message_confirm_address_screen.cpp  seed_sign_message_confirm_message_screen.cpp  seed_transcribe_seedqr_format_screen.cpp  seed_transcribe_whole_qr_screen.cpp  seed_transcribe_zoomed_qr_screen.cpp  seed_words_screen.cpp  settings_locale_picker_screen.cpp  settings_qr_confirmation_screen.cpp  toast_overlay_screen.cpp  tools_address_explorer_address_list_screen.cpp  tools_calc_final_word_done_screen.cpp  (+1 more)
docs/: IMPORT_NOTES-2026-02-26.md  INPUT_NAVIGATION_IMPLEMENTATION_PLAN.md  PERF_CHECKPOINT_13FPS.md  UPSTREAM_DEVIATIONS.md  button_list_screen_parity.md  camera-preview-overlay-spec.md  complex-script-shaping-plan.md  complex-script-shaping-spike-plan.md  display-bringup-status-2026-02-26.md  font-and-i18n-implementation-plan.md  font-and-i18n-rendering.md  font-farsi-rtl-plan.md  font-memory-plan.md  font-tiering-plan.md  i18n-lvgl-release-model.md  i18n-ngettext-micropython-spec.md  language-pack-production-and-delivery-notes.md  lvgl-v9-migration-plan.md  qr-display-screen-spec.md  reenable-screenshot-diff-ci-todo.md  screen-conformance-pilot-report.md  screen-conformance-spec.md  screen_implementation_plan.md  tools-reorg-plan.md
docs/knowledge/: complex-script-render-layer.md  complex-script-run-pipeline.md  dynamic-text-contract-audit.md  emscripten-growable-arraybuffer-textdecoder.md  font-instance-dedup-chain-direction.md  font-loading-binfont-vs-tiny-ttf.md  fork-pr-ci-token-permissions.md  glyph-run-scroll-offset.md  glyph-run-single-line-label-wrap-collapse.md  hardware-focus-label-marquee.md  i18n-text-vs-render-platform-asymmetry.md  image-entropy-dimension-free-app-boundary.md  io-test-owned-camera-plane.md  label-autoscroll-feel.md  language-pack-format-and-policy-authority.md  large-icon-status-screen-parity.md  locale-picker-and-endonym-images.md  locale-switch-font-lifecycle.md  lv-font-conv-include-preamble.md  lvgl-keyboard-text-entry.md  offline-harfbuzz-shaping-spike-findings.md  screenshot-gen-lvgl-mem-pool-exhaustion.md  shaped-text-status-vertical-metrics.md  tiny-ttf-cache-spin-root-cause.md
lang-packs/el/: manifest.json
lang-packs/fa/: manifest.json
scripts/: bake_icon_fonts.py  bake_keyboard_fonts.py  png_to_lvgl.py
tests/: repl_test_button_list_flow.py  repl_test_button_list_screen.py
tools/: README.md  scenarios.json
tools/apps/runner_core/test/: CMakeLists.txt  test_runner_core.cpp
tools/apps/screen_runner/: CMakeLists.txt  README.md  screen_runner.cpp
tools/apps/screenshot_generator/: CMakeLists.txt  README.md  compare_screenshots.py  gen_gallery.py  screenshot_gen.cpp  shape_spike.cpp  shape_spike.h  stb_glyph_metrics.c  stb_glyph_metrics.h
tools/apps/web_runner/: CMakeLists.txt  Dockerfile  README.md  build.sh  gallery.html  gen_scenarios.py  landing.html  serve.sh  shell.html  stage_assets.py  web_runner.cpp
tools/screen_runner/: CMakeLists.txt  README.md  screen_runner.cpp
tools/screenshot_generator/: CMakeLists.txt  README.md  compare_screenshots.py  screenshot_gen.cpp
(+74 files in other folders)
